--- a/index.html
+++ b/index.html
@@ -136,15 +136,15 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-              <h2 class="mt-0">Let's Get In Touch!</h2>
+              <h2 class="mt-0">Get In Touch With Me!</h2>
               <hr class="divider my-4">
-              <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
             </div>
           </div>
           <div class="row">
             <div class="col-lg-3 ml-auto text-center">
               <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-              <div>+1 (202) 555-0149</div>
+              <div>+1 (503) 724-8541</div>
+              <p class="text-muted">If I do not pickup please leave a message</p>
             </div>
             <div class="col-lg-3 ml-auto text-center">
                 <i class="fab fa-github-square fa-3x mb-3 text-muted"></i>
