Change Wording Update Spelling
changed wording and spelling in #about

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">who/what/why</h2>
           <hr class="divider light my-4">
-          <p class="text-white mb-4">Hello! My names is Austin Wunderlich. It is my dream to work hard to be a great software developer. I've worked since I was in high school, in jobs
-              at restaurants, retail, call centers, 9-5 desk jobs, and more. However working those jobs were never fulfilling. Then I started learning to code as a hobby and enjoyed it so much I made it my mission to make it
-              my career. That's what im still doing today, working hard to have a succesful career in the tech industry, hopefully I can continue to achieve that with you!
+          <p class="text-white mb-4">Hello! My name is Austin Wunderlich. I work hard everyday to be the best software developer I can be. I've had jobs at restaurants,
+             in retail, call centers, 9 to 5 desk positions, and more. However, it was never fulfilling. Then I started learning to code as a hobby and since I enjoyed it so much I
+              made it my career. Now I continue to build a successful career in the tech industry, and hopefully I can accomplish that with you!
           </p>
         </div>
       </div>
