link pizza maker project to index page on portfolio website under #projects

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="mt-5">
             <i class="fab fa-4x fa-js-square text-primary mb-4"></i>
             <h3 class="h4 mb-2">JavaScript</h3>
-            <p class="text-muted mb-0">Experience with JavaScript.</p>
+            <p class="text-muted mb-0">Experience with JavaScript. Knowledgeable in AJAX and JQuery.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -127,7 +127,7 @@
   <section id="projects" class="page-section bg-dark text-white">
         <div class="container text-center">
             <h2 class="mb-4">Projects!</h2>
-            <a class="btn btn-light btn-xl" href="">Coming Soon</a>
+            <a class="btn btn-light btn-xl" href="pizza.html">HTML/CSS/JS Pizza Maker Demo</a>
         </div>
   </section>
 
