change order button to block button

--- a/pizza.html
+++ b/pizza.html
@@ -213,7 +213,7 @@
                 <!---------------------------------------/ROW 3 CONTAINER------------------------------------------------>
 
                 <div class="container bg-danger rounded-lg py-3">
-                        <button type="button" class="btn btn-light" onclick="getReceipt()">Order</button>
+                        <button type="button" class="btn btn-light btn-block" onclick="getReceipt()">Order</button>
                         <div id="cart">
                             <div id="showText"></div>
                             <div id="totalPrice"></div>
