--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="col-lg-8 text-center">
           <h2 class="text-white mt-0">who/what/why</h2>
           <hr class="divider light my-4">
-          <p class="text-white mb-4">Hello! My name is Austin Wunderlich. I work hard everyday to be the best software developer I can be. I've had jobs at restaurants,
+          <p class="text-white mb-4">Hello! My name is Austin Wunderlich. I work hard every day to be the best software developer I can be. I've had jobs at restaurants,
              in retail, call centers, 9 to 5 desk positions, and more. However, it was never fulfilling. Then I started learning to code as a hobby and since I enjoyed it so much I
               made it my career. Now I continue to build a successful career in the tech industry, and hopefully I can accomplish that with you!
           </p>
@@ -116,7 +116,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
             <h3 class="h4 mb-2">Soft Skills</h3>
-            <p class="text-muted mb-0">Experience working in an office and face to face with customers. Strong communication skills and work ethic. Able to work as a leader or team player. Accepting and fast acting with criticism.</p>
+            <p class="text-muted mb-0">Experience working in an office and face-to-face with customers. Strong communication skills and work ethic. Able to work as a leader or team player. Accepting and responsive with criticism.</p>
           </div>
         </div>
       </div>
