--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-4x fa-python text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Python</h3>
-            <p class="text-muted mb-0">Experience with Python.</p>
+            <i class="fas fa-4x fas fa-database text-primary mb-4"></i>
+            <h3 class="h4 mb-2">SQL</h3>
+            <p class="text-muted mb-0">Experience with SQL, SQL Server specifically.</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
