--- a/pizza.html
+++ b/pizza.html
@@ -17,7 +17,7 @@
             </p>
         </div>
         <!-------------------------------ROW 1 CONTAINER-------------------------------------------------------------->
-        <div class="container pb-3">
+        <div class="container pb-3 bg-in">
                 <div class="row">
                 <!---------------------------------------------PIZZA SIZE-------------------------------------------------->
                   <div class="col">
