--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fas fa-4x fa-code text-primary mb-4"></i>
-            <h3 class="h4 mb-2">HTML/CSS</h3>
-            <p class="text-muted mb-0">Experience with HTML/CSS.</p>
+            <i class="fab fa-4x fa-python text-primary mb-4"></i>
+            <h3 class="h4 mb-2">Python</h3>
+            <p class="text-muted mb-0">Experience with Python. Familiar with Django and Tkinter</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -109,7 +109,7 @@
           <div class="mt-5">
             <i class="fas fa-4x fas fa-database text-primary mb-4"></i>
             <h3 class="h4 mb-2">SQL</h3>
-            <p class="text-muted mb-0">Experience with SQL, SQL Server specifically.</p>
+            <p class="text-muted mb-0">Experience with SQL in general, especially SQL Server and SQLite 3</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
