--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
-            <i class="fab fa-4x fa-js-square text-primary mb-4"></i>
-            <h3 class="h4 mb-2">JavaScript</h3>
-            <p class="text-muted mb-0">Experience with JavaScript. Knowledgeable in AJAX and JQuery.</p>
+            <i class="fab fa-4x fas fa-file-code text-primary mb-4"></i>
+            <h3 class="h4 mb-2">C#</h3>
+            <p class="text-muted mb-0">Experience with C# and the Microsoft suite</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fas fa-database text-primary mb-4"></i>
             <h3 class="h4 mb-2">SQL</h3>
-            <p class="text-muted mb-0">Experience with SQL in general, especially SQL Server and SQLite 3</p>
+            <p class="text-muted mb-0">Experience with SQL in general, especially SQL Server and SSRS as well as SQLite 3</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -127,7 +127,8 @@
   <section id="projects" class="page-section bg-dark text-white">
         <div class="container text-center">
             <h2 class="mb-4">Projects!</h2>
-            <a class="btn btn-light btn-xl" href="pizza.html">HTML/CSS/JS Pizza Maker Demo</a>
+            <div><a class="btn btn-light btn-xl" href="pizza.html">HTML/CSS/JS Pizza Maker Demo</a></div>
+            <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/C-Sharp-Projects/tree/master/InsuranceQuoteMVC%20-%20Copy">C# MVC Insurance Quote App</a></div>
         </div>
   </section>
 
