--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </section>
 
   <!-- Skills Section -->
-  <section class="page-section border border-dark" id="skills">
+  <section class="page-section" id="skills">
     <div class="container">
       <h2 class="text-center mt-0">Skills</h2>
       <hr class="divider my-4">
