add link to code summaries

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             <h2 class="mb-4">Projects!</h2>
             <div><a class="btn btn-light btn-xl" href="pizza.html">HTML/CSS/JS Pizza Maker Demo</a></div>
             <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/C-Sharp-Projects/tree/master/InsuranceQuoteMVC%20-%20Copy">C# MVC Insurance Quote App</a></div>
+            <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/Code-Summaries">Code Summaries</a></div>
         </div>
   </section>
 
