add project change wording

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="mt-5">
             <i class="fab fa-4x fas fa-file-code text-primary mb-4"></i>
             <h3 class="h4 mb-2">C#</h3>
-            <p class="text-muted mb-0">Experience with C# and the Microsoft suite</p>
+            <p class="text-muted mb-0">Experience with C# and the ASP.NET MVC / Entity Framework</p>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 text-center">
@@ -115,7 +115,7 @@
         <div class="col-lg-3 col-md-6 text-center">
           <div class="mt-5">
             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-            <h3 class="h4 mb-2">Soft Skills</h3>
+            <h3 class="h4 mb-2">Interpersonal Skills</h3>
             <p class="text-muted mb-0">Experience working in an office and face-to-face with customers. Strong communication skills and work ethic. Able to work as a leader or team player. Accepting and responsive with criticism.</p>
           </div>
         </div>
@@ -129,6 +129,7 @@
             <h2 class="mb-4">Projects!</h2>
             <div><a class="btn btn-light btn-xl" href="pizza.html">HTML/CSS/JS Pizza Maker Demo</a></div>
             <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/C-Sharp-Projects/tree/master/InsuranceQuoteMVC%20-%20Copy">C# MVC Insurance Quote App</a></div>
+            <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/C-Sharp-Projects/tree/master/TwentyOne">C# MVC TwentyOne Card Game Console App</a></div>
             <div><a class="btn btn-light btn-xl mt-3" href="https://github.com/A-Wunderlich/Code-Summaries">Code Summaries</a></div>
         </div>
   </section>
